--- a/package.json
+++ b/package.json
@@ -5,12 +5,18 @@
   "scripts": {
     "start": "node app.js"
   },
+  "engines": {
+    "node": "0.10.x",
+    "npm": "1.3.x"
+  },
   "dependencies": {
     "express": "3.4.8",
     "jade": "*",
     "stylus": "*",
     "redis": "~0.10.1",
-    "mongoose": "~3.8.7"
+    "mongoose": "~3.8.7",
+    "passport": "~0.2.0",
+    "passport-local": "~0.1.6"
   },
   "main": "index.js",
   "author": "stimko",
